Fixed & added some stuff in FTPFileTransferSystem--passive mode, binary mode, isDirectory(), etc.
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@25 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/.project
+++ b/trunk/.project
@@ -21,7 +21,7 @@
 			<arguments>
 				<dictionary>
 					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/Ant Build.launch</value>
+					<value>&lt;project&gt;/.externalToolBuilders/Ant.launch</value>
 				</dictionary>
 			</arguments>
 		</buildCommand>
