minor changes, Sweep.java javadoc.
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@40 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/.project
+++ b/trunk/.project
@@ -11,16 +11,12 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>net.sourceforge.metrics.builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
 			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
+			<triggers>full,incremental,</triggers>
 			<arguments>
 				<dictionary>
 					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/Ant.launch</value>
+					<value>&lt;project&gt;/.externalToolBuilders/Ant Builder.launch</value>
 				</dictionary>
 			</arguments>
 		</buildCommand>
@@ -29,4 +25,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>net.sourceforge.metrics.nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>bin</name>
+			<type>2</type>
+			<location>/Users/ebaskerv/Software/gridsweeper/bin</location>
+		</link>
+	</linkedResources>
 </projectDescription>
