fixed package name specification in manifest in ant build.xml.
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@60 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -24,7 +24,7 @@
 	
 	<target name="jar" depends="compile" description="Build jar">
 		<manifest file="MANIFEST.MF">
-			<attribute name="Main-Class" value="com.edbaskerville.gridsweeper.GridSweeper"/>
+			<attribute name="Main-Class" value="edu.umich.lsa.cscs.gridsweeper.GridSweeper"/>
 		</manifest>
 
 		<mkdir dir="${classes}"/>
