Drastic changes to how RNG seeds are generated. They're always positive, and always between 0 and 2^(number of bits) - 1, where the number of bits is specified by the user (defaulting to 16).
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@90 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -24,7 +24,7 @@
 	
 	<target name="jar" depends="compile" description="Build jar">
 		<manifest file="MANIFEST.MF">
-			<attribute name="Main-Class" value="edu.umich.lsa.cscs.gridsweeper.GridSweeper"/>
+			<attribute name="Main-Class" value="edu.umich.lsa.cscs.gridsweeper.GridSweeperTool"/>
 		</manifest>
 
 		<mkdir dir="${classes}"/>
@@ -62,12 +62,8 @@ GS_ROOT/
 		gdrone
 		grunner
 	classes/
-		classes.jar
-			(all classes except those with main methods)
 		GridSweeper.jar
-			(app/tool class)
-		GridSweeperRunner.jar
-			(class to actually run simulations on agents)
+			(all classes)
 	plugins/
 	
 -->
