Implemented experiment XML writer, modified experiment case XML writer to print all runs in one go.
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@92 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -29,7 +29,7 @@
 
 		<mkdir dir="${classes}"/>
 		<jar 
-			excludes="**/*Test.class **/*.gsweep"
+			excludes="**/*Test.class **/*.gsweep **/*.gsexp"
 			jarfile="${jarfile}"
 			basedir="${bin}"
 			manifest="MANIFEST.MF"
