removed stochastic sweeps and replaced seed generation to use colt's RandomSeedGenerator class.
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@95 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -10,6 +10,7 @@
 	<property name="classes" location="${dist}/classes"/>
 	<property name="jarfile" location="${classes}/GridSweeper.jar"/>
 	<property name="distbin" location="${dist}/bin"/>
+	<property name="distman" location="${dist}/man/man1"/>
 	
 	<target name="dist" depends="jar">
 		<copy file="gsweep" tofile="${distbin}/gsweep" />
@@ -20,6 +21,8 @@
 		
 		<copy file="grunner" tofile="${distbin}/grunner" />
 		<chmod file="${distbin}/grunner" perm="755"/>
+		
+		<copy file="gsweep.1" tofile="${distman}/gsweep.1" />
 	</target>
 	
 	<target name="jar" depends="compile" description="Build jar">
