--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="/Library/Frameworks/XgridDRMAA.framework/Versions/A/Resources/Java/XgridDRMAA.jar"/>
 	<classpathentry kind="lib" path="/Library/Java/Extensions/commons-net-1.4.1.jar"/>
 	<classpathentry kind="lib" path="/Library/Java/Extensions/jakarta-oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="/Library/Java/Extensions/colt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
