--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -19,6 +19,9 @@
 		<copy file="gdrone" tofile="${distbin}/gdrone" />
 		<chmod file="${distbin}/gdrone" perm="755"/>
 		
+		<copy file="gsmail" tofile="${distbin}/gsmail" />
+		<chmod file="${distbin}/gsmail" perm="755"/>
+		
 		<copy file="grunner" tofile="${distbin}/grunner" />
 		<chmod file="${distbin}/grunner" perm="755"/>
 		
