updated build.xml for new setup
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@173 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -38,7 +38,7 @@
 
 		<mkdir dir="${classes}"/>
 		<jar 
-			excludes="**/*Test.class **/*.gsweep **/*.gsexp"
+			excludes="**/*.gsweep **/*.gsexp"
 			jarfile="${jarfile}"
 			basedir="${bin}"
 			manifest="MANIFEST.MF"
@@ -53,6 +53,7 @@
 			source="1.5"
 			target="1.5"
 			debug="${compile.debug}"
+			excludes="**/*Test*.java"
 		/>
 	</target>
 	
