--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="bin" path="src"/>
+	<classpathentry kind="src" output="build" path="src"/>
 	<classpathentry kind="var" path="JRE_LIB"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="/Library/Frameworks/XgridDRMAA.framework/Versions/A/Resources/Java/XgridDRMAA.jar"/>
 	<classpathentry kind="lib" path="/Library/Java/Extensions/commons-net-1.4.1.jar"/>
 	<classpathentry kind="lib" path="/Library/Java/Extensions/jakarta-oro-2.0.8.jar"/>
 	<classpathentry kind="lib" path="/Library/Java/Extensions/colt.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
