minor manpage metadata changes. outline and draft introductory material of user's manual. added creation of empty lib dir in dist target of ant buildfile.
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@191 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -30,6 +30,7 @@
 		</copy>
 		
 		<mkdir dir="${dist}/plugins"/>
+		<mkdir dir="${dist}/lib"/>
 	</target>
 	
 	<target name="jar" depends="compile" description="Build jar">
