finished drafting tutorial section of manual. added examples directory to documentation.
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@192 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -25,6 +25,10 @@
 		
 		<copy todir="${distdoc}" file="${build}/doc/gridsweeper-manual.html"/>
 		
+		<copy todir="${distdoc}/examples">
+			<fileset dir="${doc}/examples"/>
+		</copy>
+		
 		<copy todir="${distman}">
 			<fileset dir="${build}/doc/man/man1"/>
 		</copy>
