added installation instructions and gzip'd tar creation in ant buildfile
git-svn-id: svn+ssh://battistini.cscs.lsa.umich.edu/users/gsweep/svn/gridsweeper@199 e466becf-6918-0410-8e4b-ca7f87a03805

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -6,7 +6,7 @@
 	<property name="src" location="src"/>
 	<property name="build" location="build"/>
 	<property name="doc" location="doc"/>
-	<property name="dist" location="dist"/>
+	<property name="dist" location="dist/gridsweeper"/>
 	
 	<property name="classes" location="${dist}/classes"/>
 	<property name="jarfile" location="${classes}/GridSweeper.jar"/>
@@ -40,6 +40,10 @@
 		
 		<mkdir dir="${dist}/plugins"/>
 		<mkdir dir="${dist}/lib"/>
+		
+		<tar tarfile="gridsweeper.tar" basedir="dist"/>
+		<gzip zipfile="gridsweeper.tar.gz" src="gridsweeper.tar"/>
+		<delete file="gridsweeper.tar"/>
 	</target>
 	
 	<target name="jar" depends="compile" description="Build jar">
